--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -28,12 +28,14 @@
           android:layout_height="wrap_content"
           android:text="@string/false_button" />
 
-      <Button
-          android:id="@+id/next_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@string/next_button" />
      </LinearLayout>
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button"
+        android:layout_gravity="center_horizontal"/>
 
 
 </LinearLayout>
