--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -40,15 +40,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/prev_button"
-            android:layout_gravity="center_horizontal"
+            android:drawableLeft="@drawable/arrow_left"
+            android:drawablePadding="4dp"
             />
 
         <Button
+
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/next_button"
-            android:layout_gravity="center_horizontal"/>
+            android:drawableRight="@drawable/arrow_right"
+            android:drawablePadding="4dp"
+            />
     </LinearLayout>
 
 </LinearLayout>
