--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -35,6 +35,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+
+        <Button
+            android:id="@+id/cheat_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cheat_button"/>
+    </LinearLayout>
+
+     <LinearLayout
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content">
+
         <ImageButton
             android:id="@+id/prev_button"
             android:layout_width="wrap_content"
@@ -49,6 +61,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/arrow_right"
             />
+         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+
